core/tests/integration/fail/records/merge_different_vals_default_prio.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::MergeIncompatibleArgs'
({ a | default = false } & { a | default = true }).a